--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,78 +4,86 @@ jobs:
       vmImage: macOS 10.13
   strategy:
     matrix:
-      3b5deb01:
-        cpython_commit: 3b5deb01
-      ed222a74:
-        cpython_commit: ed222a74
-      aaf47caf:
-        cpython_commit: aaf47caf
-      7c59362a:
-        cpython_commit: 7c59362a
-      e2500610:
-        cpython_commit: e2500610
-      709d23de:
-        cpython_commit: 709d23de
-      39baace6:
-        cpython_commit: 39baace6
-      d914596a:
-        cpython_commit: d914596a
-      da084704:
-        cpython_commit: da084704
-      0c9258a6:
-        cpython_commit: 0c9258a6
-      b7272395:
-        cpython_commit: b7272395
-      11fa0e48:
-        cpython_commit: 11fa0e48
-      4c70d9f7:
-        cpython_commit: 4c70d9f7
-      58159ef8:
-        cpython_commit: 58159ef8
-      44a79cc5:
-        cpython_commit: 44a79cc5
-      2eb6ad85:
-        cpython_commit: 2eb6ad85
-      163403a6:
-        cpython_commit: 163403a6
-      0d12672b:
-        cpython_commit: 0d12672b
-      b08746bf:
-        cpython_commit: b08746bf
-      24477735:
-        cpython_commit: 24477735
-      79d21331:
-        cpython_commit: 79d21331
-      17b1d5d4:
-        cpython_commit: 17b1d5d4
-      01e0afa9:
-        cpython_commit: 01e0afa9
-      39487196:
-        cpython_commit: 39487196
-      7c4ab2af:
-        cpython_commit: 7c4ab2af
-      d145775b:
-        cpython_commit: d145775b
-      bc9aa813:
-        cpython_commit: bc9aa813
-      66ecefcf:
-        cpython_commit: 66ecefcf
-      7e0d882a:
-        cpython_commit: 7e0d882a
-      941ec210:
-        cpython_commit: 941ec210
-      4857543a:
-        cpython_commit: 4857543a
-      ddbe9769:
-        cpython_commit: ddbe9769
-      d1c82c5c:
-        cpython_commit: d1c82c5c
-      d7aed410:
-        cpython_commit: d7aed410
-      3fb813d2:
-        cpython_commit: 3fb813d2
-      84521047:
-        cpython_commit: 84521047
+      8d0ef0b5:
+        cpython_commit: 8d0ef0b5
+      8d561092:
+        cpython_commit: 8d561092
+      4cdbc452:
+        cpython_commit: 4cdbc452
+      0f0a30f4:
+        cpython_commit: 0f0a30f4
+      e225bebc:
+        cpython_commit: e225bebc
+      395420e2:
+        cpython_commit: 395420e2
+      d9677f36:
+        cpython_commit: d9677f36
+      13136e83:
+        cpython_commit: 13136e83
+      3cf7ea12:
+        cpython_commit: 3cf7ea12
+      fb9423fd:
+        cpython_commit: fb9423fd
+      3caf4de6:
+        cpython_commit: 3caf4de6
+      13ed0799:
+        cpython_commit: 13ed0799
+      b7fade4f:
+        cpython_commit: b7fade4f
+      1a4d9ffa:
+        cpython_commit: 1a4d9ffa
+      56624a99:
+        cpython_commit: 56624a99
+      66501058:
+        cpython_commit: 66501058
+      4a686504:
+        cpython_commit: 4a686504
+      396e0a8d:
+        cpython_commit: 396e0a8d
+      a6ec1ce1:
+        cpython_commit: a6ec1ce1
+      8cbb5b66:
+        cpython_commit: 8cbb5b66
+      3a46d5c2:
+        cpython_commit: 3a46d5c2
+      ba043021:
+        cpython_commit: ba043021
+      2a58b063:
+        cpython_commit: 2a58b063
+      1b69c092:
+        cpython_commit: 1b69c092
+      249b7d59:
+        cpython_commit: 249b7d59
+      eda385c0:
+        cpython_commit: eda385c0
+      29cb21dd:
+        cpython_commit: 29cb21dd
+      43fdbd27:
+        cpython_commit: 43fdbd27
+      46ed90dd:
+        cpython_commit: 46ed90dd
+      7d408697:
+        cpython_commit: 7d408697
+      e1f95e77:
+        cpython_commit: e1f95e77
+      41540699:
+        cpython_commit: 41540699
+      382034b2:
+        cpython_commit: 382034b2
+      51ddab8d:
+        cpython_commit: 51ddab8d
+      9a7e5b1b:
+        cpython_commit: 9a7e5b1b
+      74d7f76e:
+        cpython_commit: 74d7f76e
+      a3568417:
+        cpython_commit: a3568417
+      695b1dd8:
+        cpython_commit: 695b1dd8
+      8cd5165b:
+        cpython_commit: 8cd5165b
+      16cefb0b:
+        cpython_commit: 16cefb0b
 
   steps:
 
@@ -101,5 +109,5 @@ jobs:
       cd astropy
       git checkout fix-io-ascii-38
       $HOME/pythondev/bin/pip3 install -e .
-      $HOME/pythondev/bin/python3 -m pytest astropy/io/ascii/tests/test_c_reader.py
+      $HOME/pythondev/bin/python3 -m pytest astropy/io/ascii/tests/test_c_reader.py -v -x
     displayName: Installing and testing Astropy
